--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <li><a href="http://www.99javgc.com/?fromuid=320" target="_blank">99爱唯工厂</a></li>
 <li><a href="http://7wo.info/forum.php" target="_blank">365论坛</a></li>
 <li><a href="http://14.102.250.19/forum/" target="_blank">18p2p</a></li>
-<li><a href="http://www.sewangchao2.com/" target="_blank">夜色王朝</a></li>
+<li><a href="http://www.sewangchao3.com/" target="_blank">夜色王朝</a></li>
 <li><a href="http://www.new-3lunch.net/?fromuid=441850" target="_blank">New-3Lunch</a></li>
 <li><a href="http://wk.hizhan123.com/?fromuid=376863" target="_blank">WK綜合論壇</a></li>
 <li><a href="https://www.tvboxnow.com/index.php" target="_blank">公仔箱論壇</a></li>
@@ -89,7 +89,7 @@
 <li><a href="http://204.152.220.40/index.php?fromuid=282768" target="_blank">黑暗圣殿</a></li>
 <li><a href="http://www.piring.com/bbs/tcn/?fromuid=2061069" target="_blank">痴汉俱乐部</a></li>
 <li><a href="http://t3.9laik.org/pw/" target="_blank">1024核工厂</a></li>
-<li><a href="http://www.51youba.pw/?fromuid=1577" target="_blank">老司机论坛</a></li>
+<li><a href="http://www.aiyouyou.pw/?fromuid=1577" target="_blank">老司机论坛</a></li>
 <li><a href="http://45.76.208.137/?fromuid=2571826" target="_blank">捷克論壇</a></li>
 <li><a href="http://www.lsj1080.com/" target="_blank">MYHD1080</a></li>
 <li><a href="http://catcatforum.com/?fromuid=3045850" target="_blank">貓貓論壇</a></li>
@@ -112,7 +112,7 @@
 <li><a href="https://caoav.net/" target="_blank">CaoAV</a></li>
 <li><a href="https://bbs.caoav.net/?fromuid=29070" target="_blank">CaoAV社区</a></li>
 <li><a href="http://www.99rebbs7.com/?fromuid=685495" target="_blank">99re论坛</a></li>
-<li><a href="http://ww-youbbb.com/?fromuid=65678" target="_blank">有B吗？</a></li>
+<li><a href="http://ww.b7bbb.com/?fromuid=65678" target="_blank">有B吗？</a></li>
 <li><a href="http://174.138.175.178/" target="_blank">比思论坛</a></li>
 <li><a href="http://www.bbx365.com/?fromuid=1010710" target="_blank">百姓阁</a></li>
 <li><a href="http://kb978.com/?fromuid=19246" target="_blank">9453社區</a></li>
@@ -238,6 +238,7 @@
 <li><a href="http://www.saomao8.com/" target="_blank">久久视频</a></li>
 <li><a href="http://www.aotu20.com/" target="_blank">凹凸视频</a></li>
 <li><a href="http://www.qqxxcc.com/" target="_blank">青青草</a></li>
+<li><a href="http://www.qylsp.com/" target="_blank">青娱乐视频</a></li>
 <li><a href="http://www.se848.com/" target="_blank">撸尔山</a></li>
 <li><a href="http://www.zz1255.com/" target="_blank">姐姐要爱</a></li>
 <li><a href="http://www.9i88.vip/" target="_blank">久爱啪啪网</a></li>
@@ -297,7 +298,6 @@
 <li><a href="https://www.tnaflix.com/" target="_blank">TNAFlix</a></li>
 <li><a href="http://www.keezmovies.com/" target="_blank">keezm</a></li>
 <li><a href="http://www.hd21.com/" target="_blank">Hd21</a></li>
-<li><a href="http://www.longsextube.net/" target="_blank">Longsex</a></li>
 <li><a href="http://www.kuntfutube.com/" target="_blank">KuntFu Tube</a></li>
 <li><a href="http://www.pornomovies.com/" target="_blank">PornoMovies</a></li>
 <li><a href="http://instantfap.com/" target="_blank">精彩片断</a></li>
@@ -305,16 +305,14 @@
 <li><a href="http://thisvid.com/" target="_blank">ThisVid</a></li>
 <li><a href="http://www.shameless.com/" target="_blank">Shameless</a></li>
 <li><a href="https://www.fetishshrine.com/" target="_blank">FetishShrine</a></li>
-<li><a href="http://www.asianpornmovies.com/" target="_blank">Asianporn</a></li>
-<li><a href="http://zbporn.com/" target="_blank">ZBPORN</a></li>
+<li><a href="https://zbporn.com/" target="_blank">ZBPORN</a></li>
 <li><a href="https://tub99.com/" target="_blank">TUB99</a></li>
 <li><a href="https://www.tubx.porn/" target="_blank">TUBXPORN</a></li>
 <li><a href="http://www.seemyporn.com/" target="_blank">SeeMyPorn</a></li>
-<li><a href="http://www.uporno.xxx/" target="_blank">UPORNO</a></li>
+<li><a href="https://www.uporno.xxx/" target="_blank">UPORNO</a></li>
 <li><a href="https://xhamster.com/" target="_blank">xHamster</a></li>
 <li><a href="https://xfreehd.com/" target="_blank">XFreeHD</a></li>
 <li><a href="https://www.xvideos.com/" target="_blank">XVIDEOS</a></li>
-<li><a href="http://www.freejizzvideos.com/" target="_blank">Free Jizz</a></li>
 <li><a href="https://www.hdpornt.com/" target="_blank">HDPORNT</a></li>
 <li><a href="http://www.movieshark.com/" target="_blank">MOVIESHARK</a></li>
 <li><a href="http://neathdporn.com/" target="_blank">Neat HD Porn</a></li>
@@ -329,7 +327,7 @@
 <li><a href="http://hqporner.com/" target="_blank">HQporner</a></li>
 <li><a href="http://lentaporno.com/" target="_blank">LentaPorno</a></li>
 <li><a href="http://www.poimel.org/" target="_blank">poimel</a></li>
-<li><a href="https://porn-line.com/" target="_blank">Porn-Line</a></li>
+<li><a href="https://plashporn.com/" target="_blank">PlashPorn</a></li>
 <li><a href="http://www.teenporntube.xxx/" target="_blank">TeenPornTube</a></li>
 <li><a href="http://dato.porn/" target="_blank">DatoPorn</a></li>
 <li><a href="https://faapy.com/" target="_blank">Faapy</a></li>
@@ -340,14 +338,13 @@
 <li><a href="http://www.youramateurporn.com/" target="_blank">YourAmateur</a></li>
 <li><a href="http://www.homemoviestube.com/" target="_blank">HomeMovies</a></li>
 <li><a href="http://www.voyeurseason.com/" target="_blank">VoyeurSeason</a></li>
-<li><a href="http://www.homemadeporn.com/" target="_blank">Homeporn</a></li>
 <li><a href="https://www.pornhd.com/" target="_blank">PornHD</a></li>
 <li><a href="https://www.pornhub.com/" target="_blank">PornHub</a></li>
 <li><a href="https://www.pornky.com/" target="_blank">Pornky</a></li>
 <li><a href="http://pornmaki.com/" target="_blank">Pornmaki</a></li>
 <li><a href="http://www.proporn.com/" target="_blank">ProPorn</a></li>
 <li><a href="https://www.joysporn.com/" target="_blank">joysporn</a></li>
-<li><a href="http://www.likuoo.video/" target="_blank">likuoo</a></li>
+<li><a href="https://www.likuoo.video/" target="_blank">likuoo</a></li>
 <li><a href="http://pornxs.com/" target="_blank">Pornxs</a></li>
 <li><a href="https://www.porn.com/" target="_blank">PORN</a></li>
 <li><a href="https://www.pornjam.com/" target="_blank">Pornjam</a></li>
@@ -356,24 +353,20 @@
 <li><a href="https://www.pornoxo.com/" target="_blank">PornoXO</a></li>
 <li><a href="http://www.18porn.sex/" target="_blank">18Porn</a></li>
 <li><a href="https://www.ashemaletube.com/" target="_blank">aShemaleTube</a></li>
-<li><a href="http://xvideohard.com/" target="_blank">xvideohard</a></li>
 <li><a href="http://www.xxxkinky.com/" target="_blank">xxxkinky</a></li>
 <li><a href="http://www.eroxia.com/" target="_blank">Eroxia</a></li>
-<li><a href="http://www.forhertube.com/" target="_blank">ForHerTube</a></li>
 <li><a href="https://www.youporn.com/" target="_blank">YouPorn</a></li>
 <li><a href="https://www.porn300.com/" target="_blank">Porn300</a></li>
 <li><a href="http://www.timtube.com/" target="_blank">TimTube</a></li>
 <li><a href="https://www.pornrabbit.com/" target="_blank">PornRabbit</a></li>
 <li><a href="http://www.sexytube.me/" target="_blank">sexytube</a></li>
 <li><a href="https://www.huge6.com/" target="_blank">Huge6</a></li>
-<li><a href="http://www.hottube.me/" target="_blank">hottube</a></li>
 <li><a href="http://www.analdin.com/" target="_blank">Analdin</a></li>
 <li><a href="http://hpjav.com/" target="_blank">HPJav</a></li>
 <li><a href="http://popjav.com/" target="_blank">POPJAV</a></li>
 <li><a href="http://hdtube.co/" target="_blank">HDTube</a></li>
 <li><a href="https://www.javdoe.com/" target="_blank">JavDoe</a></li>
-<li><a href="http://leechporn.com/" target="_blank">Leechporn</a></li>
-<li><a href="http://javthai.me/" target="_blank">JavThai</a></li>
+<li><a href="https://www.javboss.com/" target="_blank">JavBoss</a></li>
 <li><a href="http://javcl.com/" target="_blank">JAVCL</a></li>
 <li><a href="https://av01.tv/" target="_blank">AV01</a></li>
 <li><a href="https://avuncensor.com/" target="_blank">AV uncensor</a></li>
@@ -460,7 +453,7 @@
 <li><a href="https://hmog.me/" target="_blank">绅士图书馆</a></li>
 <li><a href="https://zerohentai.com/" target="_blank">0hentai</a></li>
 <li><a href="http://hentai4daily.com/" target="_blank">Hentai4Daily</a></li>
-<li><a href="http://league-of-hentai.com/" target="_blank">League of Hentai</a></li>
+<li><a href="http://www.hentaibobo.com/" target="_blank">卡通泡泡</a></li>
 <li><a href="http://www.ahri8.com/" target="_blank">松鼠症倉庫</a></li>
 <li><a href="http://hentaiplay.net/" target="_blank">hentaiplay</a></li>
 <li><a href="http://hentai.animestigma.com/" target="_blank">Hentai Stigma</a></li>
@@ -491,7 +484,7 @@
 <li><a href="http://www.weipaifuliw.com/" target="_blank">微拍福利网</a></li>
 <li><a href="http://lsjxingxi.com/" target="_blank">老司机性息</a></li>
 <li><a href="http://204.152.220.30/forum.php?fromuid=3479" target="_blank">欢乐夫妻</a></li>
-<li><a href="http://2017ywzd.com/s/?fromuid=574073" target="_blank">欲望之都</a></li>
+<li><a href="http://ywzd001.com/s/?fromuid=574073" target="_blank">欲望之都</a></li>
 <li><a href="http://www.vipfuqi.com/?fromuid=776852" target="_blank">蝴蝶俱乐部</a></li>
 <li><a href="http://204.152.220.23/?fromuid=678142" target="_blank">逍遥游</a></li>
 <li><a href="http://www.cqhx.info/?fromuid=51281" target="_blank">全城嘿咻</a></li>
@@ -572,9 +565,11 @@
 		<div class="linkl">
 		<ul>
 <li><a href="http://www.ja14b.com/cn/" target="_blank">JavLibrary</a></li>
-<li><a href="https://www.javbus.info/" target="_blank">JavBus</a></li>
+<li><a href="https://www.javbus.co/" target="_blank">JavBus</a></li>
 <li><a href="https://www.javhoo.com/" target="_blank">JAVHOO</a></li>
 <li><a href="http://www.kkav.tv/" target="_blank">一本道</a></li>
+<li><a href="https://7mm.tv/" target="_blank">7mm</a></li>
+<li><a href="https://jmvbt.com/" target="_blank">Javbooks</a></li>
 <li><a href="http://www.avavav1.com/" target="_blank">AV小四郎</a></li>
 <li><a href="http://3q2w1e.xyz/" target="_blank">色狐狸</a></li>
 <li><a href="http://jp.notreal.cn/" target="_blank">假啪网</a></li>
@@ -665,8 +660,6 @@
 <li><a href="https://www.pornfoxvr.com/" target="_blank">PornfoxVR</a></li>
 <li><a href="https://www.pornqueenvr.com/" target="_blank">PornqueenVR</a></li>
 <li><a href="https://www.czechvr.com/" target="_blank">Czech VR</a></li>
-<li><a href="http://www.hottiesvr.com/" target="_blank">Hotties VR</a></li>
-<li><a href="http://www.trannypornvr.com/" target="_blank">Transexual VR</a></li>
 <li><a href="http://www.naughtyvirtualreality.com/" target="_blank">Naughty VR</a></li>
 <li><a href="https://www.hologirlsvr.com/" target="_blank">HoloGirls VR</a></li>
 <li><a href="http://www.bdsmpornvr.com/" target="_blank">Bdsm Porn VR</a></li>
@@ -691,8 +684,8 @@
 <li><a href="http://lsjtupian.com/" target="_blank">老司机图片</a></li>
 <li><a href="http://www.nucvrj.com/" target="_blank">美女生活照</a></li>
 <li><a href="http://91.p9a.space/?fromuid=697480" target="_blank">91自拍论坛</a></li>
+<li><a href="http://www.kacajp.top/?fromuid=12755" target="_blank">微笑线街拍</a></li>
 <li><a href="http://www.jp95.com/?fromuid=672975" target="_blank">街拍第一站</a></li>
-<li><a href="http://www.kacajp.com/?fromuid=12755" target="_blank">喀嚓街拍网</a></li>
 <li><a href="http://www.qmxyc.com/?fromuid=152203" target="_blank">启明星原创摄影</a></li>
 <li><a href="http://www.9gty.net/forum.php" target="_blank">九个太阳</a></li>
 <li><a href="http://www.eroti-cart.com/" target="_blank">Erotic Art</a></li>
@@ -705,10 +698,8 @@
 <li><a href="http://www.mmjpg.com/" target="_blank">美女图片</a></li>
 <li><a href="https://girl-atlas.com/" target="_blank">美女图片集</a></li>
 <li><a href="http://www.sifangtu.net/" target="_blank">美女私房图</a></li>
-<li><a href="http://www.mm131.com/" target="_blank">131美女图片</a></li>
 <li><a href="http://www.169b.com/" target="_blank">美女如云网</a></li>
 <li><a href="http://www.99mm.me/" target="_blank">九妹图社</a></li>
-<li><a href="http://izzs.co/" target="_blank">IZZS</a></li>
 <li><a href="http://www.2017guomo.info/?fromuid=130143" target="_blank">国模</a></li>
 <li><a href="http://www.guomo.red/" target="_blank">國模網</a></li>
 <li><a href="http://www.gmlying.com/" target="_blank">国模丽影</a></li>
@@ -716,7 +707,6 @@
 <li><a href="http://asiangirlcunt.com/" target="_blank">asiangirlcunt</a></li>
 <li><a href="http://www.eastbabes.com/" target="_blank">EastBabes</a></li>
 <li><a href="http://www.jppornpic.com/" target="_blank">jppornpic</a></li>
-<li><a href="http://www.japanesesexpic.net/" target="_blank">JapaneseSex</a></li>
 <li><a href="http://www.youngasianphotos.com/" target="_blank">youngasian</a></li>
 <li><a href="http://spric.me/" target="_blank">Celebrity</a></li>
 <li><a href="https://www.pornpics.com/" target="_blank">pornpics</a></li>
@@ -728,7 +718,6 @@
 <li><a href="http://ftop.ru/" target="_blank">ftop壁纸</a></li>
 <li><a href="http://imagezog.com/" target="_blank">ImageZog</a></li>
 <li><a href="http://xxgifs.com/" target="_blank">xxGifs</a></li>
-<li><a href="http://www.jigglegifs.com/" target="_blank">JiggleGifs</a></li>
 <li><a href="http://juicygif.com/" target="_blank">JuicyGif</a></li>
 <li><a href="http://gifshub.com/" target="_blank">gifshub</a></li>
 <li><a href="http://www.pichunter.com/" target="_blank">Pichunter</a></li>
