--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <li><a href="http://xisezi.co/?fromuid=80" target="_blank">Xisezi精品</a></li>
 <li><a href="http://www.jsyfyy.com/?fromuid=829" target="_blank">季色论坛</a></li>
 <li><a href="http://www.porna5.com/" target="_blank">Porn采集者</a></li>
-<li><a href="http://www.qiseshequ.org/" target="_blank">奇色社区</a></li>
+<li><a href="http://www.qiseshequ.info/" target="_blank">奇色社区</a></li>
 <li><a href="http://204.44.109.3/index.htm" target="_blank">草原狼论坛</a></li>
 <li><a href="http://mf68.xyz/" target="_blank">蜜蜂社区</a></li>
 <li><a href="http://192.240.116.140/bbs/" target="_blank">老王社区</a></li>
@@ -102,6 +102,7 @@
 <li><a href="http://www.yxg163.com/?fromuid=5741" target="_blank">夜香阁</a></li>
 <li><a href="http://aaasss8.com/" target="_blank">SeDog</a></li>
 <li><a href="http://www.xb123.top/" target="_blank">花花世界</a></li>
+<li><a href="http://www.szsezh.com/" target="_blank">水中涩</a></li>
 <li><a href="https://8888av.co/" target="_blank">千百撸</a></li>
 <li><a href="http://www.2016td.com/" target="_blank">2016TD</a></li>
 <li><a href="https://www.nnpp99.com/" target="_blank">nnpp99</a></li>
@@ -187,7 +188,7 @@
 <li><a href="http://xusiji.com/" target="_blank">老司机视频</a></li>
 <li><a href="http://95big.pw/" target="_blank">95自拍视频</a></li>
 <li><a href="http://www.pornoshock.org/asian/" target="_blank">AV天堂HD</a></li>
-<li><a href="http://www.apian70.com/" target="_blank">A片迷</a></li>
+<li><a href="http://www.apian50.com/" target="_blank">A片迷</a></li>
 <li><a href="https://oxx.life/" target="_blank">哦叉叉视频</a></li>
 <li><a href="http://www.ikan6.com/" target="_blank">爱看AV</a></li>
 <li><a href="https://yaojingav.com/" target="_blank">妖精视频</a></li>
@@ -399,7 +400,7 @@
 		<div class="linkl">
 		<ul>
 <li><a href="http://198.40.52.155/?fromuid=428789" target="_blank">偷窥客</a></li>
-<li><a href="http://www.ivnext.online/" target="_blank">少女写真论坛</a></li>
+<li><a href="http://www.tukule.com/" target="_blank">少女写真论坛</a></li>
 <li><a href="http://23.231.192.82/?fromuid=34160" target="_blank">wc俱乐部</a></li>
 <li><a href="http://voyeurhit.com/" target="_blank">偷拍视频</a></li>
 <li><a href="http://www.521yw.com/?fromuid=13485" target="_blank">我要原味</a></li>
