--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<ul>
 <li><a href="https://ns.ddder.us/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
 <li><a href="http://with.gq/" target="_blank">精品福利</a></li>
-<li><a href="http://hjwo.pw/" target="_blank">火箭社区</a></li>
+<li><a href="http://rock189.com/" target="_blank">火箭社区</a></li>
 <li><a href="http://fl473.com/" target="_blank">福利社区</a></li>
 <li><a href="http://208.94.244.98/bt/?u=701541" target="_blank">爱城</a></li>
 <li><a href="http://x77126.com/bbs/" target="_blank">Xiao77</a></li>
