--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 <li><a href="http://www.tuoleku.com/" target="_blank">脱了裤</a></li>
 <li><a href="http://www.jise8.com/" target="_blank">季色网</a></li>
 <li><a href="http://www.jier8.com/" target="_blank">鸡儿吧</a></li>
-<li><a href="http://xusiji.com/" target="_blank">老司机视频</a></li>
+<li><a href="https://post.7yinyue.pw/" target="_blank">老司机视频</a></li>
 <li><a href="http://95big.pw/" target="_blank">95自拍视频</a></li>
 <li><a href="http://www.pornoshock.org/asian/" target="_blank">AV天堂HD</a></li>
 <li><a href="http://www.apian50.com/" target="_blank">A片迷</a></li>
@@ -483,7 +483,7 @@
 <li><a href="http://sezhan.net/" target="_blank">微拍视频</a></li>
 <li><a href="http://www.weipaiwang.cc/" target="_blank">微拍网</a></li>
 <li><a href="http://www.weipaifuliw.com/" target="_blank">微拍福利网</a></li>
-<li><a href="http://lsjxingxi.com/" target="_blank">老司机性息</a></li>
+<li><a href="https://post.7yinyue.pw/info/" target="_blank">老司机性息</a></li>
 <li><a href="http://204.152.220.30/forum.php?fromuid=3479" target="_blank">欢乐夫妻</a></li>
 <li><a href="http://ywzd001.com/s/?fromuid=574073" target="_blank">欲望之都</a></li>
 <li><a href="http://www.vipfuqi.com/?fromuid=776852" target="_blank">蝴蝶俱乐部</a></li>
@@ -682,7 +682,7 @@
 		<strong><a name="/14/">美图街拍</a></strong>
 		<div class="linkl">
 		<ul>
-<li><a href="http://lsjtupian.com/" target="_blank">老司机图片</a></li>
+<li><a href="https://post.7yinyue.pw/pic/" target="_blank">老司机图片</a></li>
 <li><a href="http://www.nucvrj.com/" target="_blank">美女生活照</a></li>
 <li><a href="http://91.p9a.space/?fromuid=697480" target="_blank">91自拍论坛</a></li>
 <li><a href="http://www.kacajp.top/?fromuid=12755" target="_blank">微笑线街拍</a></li>
