--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <li><a href="https://fastzone.org/?fromuid=99373" target="_blank">無限討論區</a></li>
 <li><a href="http://bbs.sex169.pw/?fromuid=141932" target="_blank">SEX169 論壇</a></li>
 <li><a href="http://www.mimihhh.com/" target="_blank">咪咪爱</a></li>
-<li><a href="http://www.ykt6.com/" target="_blank">迎客堂</a></li>
+<li><a href="http://www.ykt9.com/" target="_blank">迎客堂</a></li>
 <li><a href="http://dio889.net/?fromuid=2077160" target="_blank">魔王の家</a></li>
 <li><a href="http://204.152.220.33/?fromuid=62536" target="_blank">新巴黎中文社区</a></li>
 <li><a href="http://www.yxg163.com/?fromuid=5741" target="_blank">夜香阁</a></li>
@@ -124,7 +124,7 @@
 <li><a href="http://www.91szs.com/" target="_blank">91涩中涩</a></li>
 <li><a href="http://dianying01.com/?fromuid=981" target="_blank">电影01社区</a></li>
 <li><a href="http://www.wochalei.com/" target="_blank">貳月紅論壇</a></li>
-<li><a href="http://cc6.us/" target="_blank">搞搞吧</a></li>
+<li><a href="http://www.kku.cc/" target="_blank">三涩论坛</a></li>
 <li><a href="http://thzbbt.com/?fromuid=70941" target="_blank">桃花族</a></li>
 				    </ul>
 		</div>
@@ -192,6 +192,7 @@
 <li><a href="https://oxx.life/" target="_blank">哦叉叉视频</a></li>
 <li><a href="http://www.ikan6.com/" target="_blank">爱看AV</a></li>
 <li><a href="https://yaojingav.com/" target="_blank">妖精视频</a></li>
+<li><a href="http://roudao1.xyz/" target="_blank">揉道视频</a></li>
 <li><a href="http://www.icaoliu.club/" target="_blank">爱草榴在线</a></li>
 <li><a href="http://www.qyule.in/" target="_blank">青娱乐</a></li>
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
@@ -206,7 +207,7 @@
 <li><a href="http://www.caobiao34.com/" target="_blank">我要操婊</a></li>
 <li><a href="http://www.91rav.com/" target="_blank">91RAV</a></li>
 <li><a href="http://www.f0yy.com/" target="_blank">7M在线视频</a></li>
-<li><a href="http://roudao.biz/" target="_blank">揉道视频</a></li>
+<li><a href="http://www.tongtongcao.com/" target="_blank">彤彤草</a></li>
 <li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
 <li><a href="http://email.qingcaodizhi.at.gmail.com.q2c.space/" target="_blank">轻草视频</a></li>
 <li><a href="http://email.lvchadizhi.at.gmail.com.gre7.space/" target="_blank">绿茶视频</a></li>
@@ -214,7 +215,7 @@
 <li><a href="http://email.v2dizhi.at.gmail.com.vv9.space/" target="_blank">V2视频</a></li>
 <li><a href="http://d8lulu.com/" target="_blank">D8视频</a></li>
 <li><a href="http://email.qisededizhi.at.gmail.com.qs7.space/" target="_blank">奇色视频</a></li>
-<li><a href="http://www.bs6.space/" target="_blank">本色视频</a></li>
+<li><a href="http://www.benselol.com/" target="_blank">本色视频</a></li>
 <li><a href="http://www.chunseporn.com/" target="_blank">春色视频</a></li>
 <li><a href="http://email.dizhi.at.f2.com.6hp.space/" target="_blank">火兔视频</a></li>
 <li><a href="http://zhizunhu.co/" target="_blank">哦哦免费电影</a></li>
@@ -240,7 +241,7 @@
 <li><a href="http://www.aotu20.com/" target="_blank">凹凸视频</a></li>
 <li><a href="http://www.qqxxcc.com/" target="_blank">青青草</a></li>
 <li><a href="http://www.qylsp.com/" target="_blank">青娱乐视频</a></li>
-<li><a href="http://www.se848.com/" target="_blank">撸尔山</a></li>
+<li><a href="http://www.lu2116.com/" target="_blank">撸尔山</a></li>
 <li><a href="http://www.zz1255.com/" target="_blank">姐姐要爱</a></li>
 <li><a href="http://www.9i88.vip/" target="_blank">久爱啪啪网</a></li>
 <li><a href="http://www.vod49.com/" target="_blank">VOD视频</a></li>
@@ -262,7 +263,6 @@
 <li><a href="https://maomidy.com/" target="_blank">猫咪AV</a></li>
 <li><a href="http://www.777mm.us/" target="_blank">夜猫</a></li>
 <li><a href="http://qiezi88.com/" target="_blank">茄子在线</a></li>
-<li><a href="http://www.sjkav.com/" target="_blank">在线手机视频</a></li>
 <li><a href="http://www.nekoxxx.com/" target="_blank">免費線上看</a></li>
 <li><a href="http://www.twav15.com/" target="_blank">AV中文</a></li>
 <li><a href="http://www.avhaha.com/" target="_blank">AVHAHA</a></li>
@@ -406,6 +406,7 @@
 <li><a href="http://www.521yw.com/?fromuid=13485" target="_blank">我要原味</a></li>
 <li><a href="http://www.52yuanwei.pw/?fromuid=190756" target="_blank">我爱原味网</a></li>
 <li><a href="http://www.nztdsm10.com/?fromuid=411498" target="_blank">女主天地</a></li>
+<li><a href="https://bbs.crtslt.com/?fromuid=102241" target="_blank">潮人特色</a></li>
 <li><a href="http://www.u15loli.com/?fromuid=13188" target="_blank">U15萝莉小店</a></li>
 <li><a href="https://u15.info/" target="_blank">U-15天堂</a></li>
 <li><a href="http://www.young-dreams.com/" target="_blank">Young Dreams</a></li>
@@ -769,38 +770,45 @@
 		<ul>
 <li><a href="https://btso.pw/search" target="_blank">BTSOW种子</a></li>
 <li><a href="http://pectsoft.com/" target="_blank">AV种子</a></li>
+<li><a href="http://www.aiosearch.com/" target="_blank">AIO Search</a></li>
 <li><a href="http://btdigg.co/" target="_blank">BTDigg</a></li>
+<li><a href="https://thepiratebay.org/" target="_blank">The Pirate Bay</a></li>
+<li><a href="http://torrentz.com/" target="_blank">Torrentz</a></li>
 <li><a href="http://torrentcrazy.to/" target="_blank">Torrent Crazy</a></li>
 <li><a href="https://www.torrentkitty.tv/search/" target="_blank">Torrentkitty</a></li>
 <li><a href="http://torrentsearchweb.co/" target="_blank">TorrentSearch</a></li>
-<li><a href="http://www.gamestorrents.com/" target="_blank">GamesTorrents</a></li>
 <li><a href="https://rarbg.to/torrents.php" target="_blank">Rarbg</a></li>
 <li><a href="http://www.trovaporno.com/" target="_blank">TrovaPorno</a></li>
 <li><a href="http://www.toorgle.com/" target="_blank">Toorgle</a></li>
 <li><a href="http://www.seedpeer.eu/" target="_blank">SeePeer</a></li>
+<li><a href="http://www.sumotorrent.sx/" target="_blank">SUMOTorrent</a></li>
 <li><a href="https://isohunt.to/" target="_blank">isoHunt</a></li>
 <li><a href="https://www.limetorrents.cc/" target="_blank">LimeTorrents</a></li>
 <li><a href="https://torrents.me/" target="_blank">torrents</a></li>
-<li><a href="http://www.demonoid.pw/" target="_blank">demonoid</a></li>
+<li><a href="https://www.demonoid.pw/" target="_blank">demonoid</a></li>
 <li><a href="http://filedron.com/" target="_blank">FileDron</a></li>
 <li><a href="http://www.queentorrent.net/" target="_blank">QueenTorrent</a></li>
 <li><a href="http://www.naughtyblog.org/" target="_blank">nahghtyblog</a></li>
+<li><a href="https://nyaa.com.de/" target="_blank">Nyaa</a></li>
+<li><a href="http://www.torrentbit.net/" target="_blank">Torrentbit</a></li>
 <li><a href="http://www.torrentfunk.com/" target="_blank">TorrentFunk</a></li>
-<li><a href="http://www.tokyotosho.info/" target="_blank">Tokyo Toshokan</a></li>
+<li><a href="https://www.tokyotosho.info/" target="_blank">Tokyo Toshokan</a></li>
+<li><a href="http://ttzy3.com/" target="_blank">图图资源</a></li>
 <li><a href="http://bt696.com/" target="_blank">种子库</a></li>
-<li><a href="http://www.ttbt7.com/" target="_blank">图图资源</a></li>
 <li><a href="http://bt2.bt87.cc/" target="_blank">种子磁力搜索</a></li>
 <li><a href="http://btgongchang.org/" target="_blank">BT工厂</a></li>
 <li><a href="http://www.btavmo.org/" target="_blank">BTAVMO</a></li>
 <li><a href="http://www.btmon.com/" target="_blank">BTMon</a></li>
 <li><a href="http://www.cilisoba.net/" target="_blank">CiLiSoBa</a></li>
+<li><a href="https://www.zzcili.net/" target="_blank">蜘蛛磁力</a></li>
 <li><a href="https://www.ciliwan.com/" target="_blank">磁力湾</a></li>
-<li><a href="http://www.cilihome.com/" target="_blank">磁力之家</a></li>
-<li><a href="http://www.yunbosou.cc/" target="_blank">云播搜</a></li>
-<li><a href="http://www.btcherry.info/" target="_blank">BT樱桃</a></li>
-<li><a href="http://www.btkuai.net/" target="_blank">BT快搜</a></li>
-<li><a href="http://www.bt977.com/" target="_blank">BT977</a></li>
-<li><a href="http://www.btmeet.org/" target="_blank">Btbook</a></li>
+<li><a href="http://www.cilizhuzhu.org/" target="_blank">磁力猪</a></li>
+<li><a href="http://www.cilihome.net/" target="_blank">磁力之家</a></li>
+<li><a href="http://www.btcherry.com/" target="_blank">BT樱桃</a></li>
+<li><a href="http://www.diaosisou.org/" target="_blank">屌丝搜</a></li>
+<li><a href="http://www.btkuai.cc/" target="_blank">BT快搜</a></li>
+<li><a href="http://www.btanx.com/" target="_blank">BT蚂蚁</a></li>
+<li><a href="http://www.btwhat.net/" target="_blank">Btbook</a></li>
 				    </ul>
 		</div>
 		</div>
