--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
 <marquee scrollamount=6 FONT style="COLOR=FF0000; FILTER: shadow(color=FFFF33 ); font-family:KaiTi; FONT-SIZE:11pt; WIDTH: 100%">蓝色导航﹑蓝色小导航，绿色无广告，近期出现无耻人渣剽窃山寨，挂虚假广告﹑钓鱼诈骗信息，内链病毒木马的假站，与本站无关。</marquee>
 	</div>												<div class="link">
 		 <div class="linka">
-		<strong><a name="/3/">综合论坛</a></strong><strong style="padding:0 238px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">蓝色小导航最新地址：<a href="http://fuli.gq" target="_blank"><span style="color:#2bf7c0;">fuli.gq</span></a> <a href="http://boat.ml" target="_blank"><span style="color:#2bf7c0;">boat.ml</span></a> <a href="http://week.gq" target="_blank"><span style="color:#2bf7c0;">week.gq</span></a></strong> 
+		<strong><a name="/3/">综合论坛</a></strong><strong style="padding:0 238px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">蓝色小导航最新地址：<a href="http://fuli.gq" target="_blank"><span style="color:#2bf7c0;">fuli.gq</span></a> <a href="http://boat.ml" target="_blank"><span style="color:#2bf7c0;">boat.ml</span></a> <a href="http://girl.gq" target="_blank"><span style="color:#2bf7c0;">girl.gq</span></a></strong> 
 		<div class="linkl">
 		<ul>
 <li><a href="https://ns.ddder.us/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
-<li><a href="http://with.gq/" target="_blank">精品福利</a></li>
+<li><a href="http://brow.ga/" target="_blank">精品福利</a></li>
 <li><a href="http://rock189.com/" target="_blank">火箭社区</a></li>
 <li><a href="http://fl473.com/" target="_blank">福利社区</a></li>
 <li><a href="http://208.94.244.98/bt/?u=701541" target="_blank">爱城</a></li>
@@ -69,14 +69,13 @@
 <li><a href="http://www.99javgc.com/?fromuid=320" target="_blank">99爱唯工厂</a></li>
 <li><a href="http://7wo.info/forum.php" target="_blank">365论坛</a></li>
 <li><a href="http://14.102.250.19/forum/" target="_blank">18p2p</a></li>
-<li><a href="http://www.sewangchao3.com/" target="_blank">夜色王朝</a></li>
 <li><a href="http://www.new-3lunch.net/?fromuid=441850" target="_blank">New-3Lunch</a></li>
 <li><a href="http://wk.hizhan123.com/?fromuid=376863" target="_blank">WK綜合論壇</a></li>
 <li><a href="https://www.tvboxnow.com/index.php" target="_blank">公仔箱論壇</a></li>
 <li><a href="http://173.192.147.20/?fromuid=1209073" target="_blank">爱碧论坛</a></li>
 <li><a href="http://365xav.tk/thread-173029-1-1.html?x=1382595" target="_blank">XIAAV论坛</a></li>
 <li><a href="http://www.aixxbbs.net/?fromuid=1199668" target="_blank">九爱城社区</a></li>
-<li><a href="http://www.mayarr.com/index.php" target="_blank">玛雅网</a></li>
+<li><a href="http://www.mayaccc.com/index.php" target="_blank">玛雅网</a></li>
 <li><a href="http://bb.taoy666.info/?fromuid=153059" target="_blank">桃隐社区</a></li>
 <li><a href="http://av.avlang18.info/index.php?a=3886" target="_blank">AV狼</a></li>
 <li><a href="http://www.ddx258.com/?fromuid=406113" target="_blank">新不夜城</a></li>
@@ -98,8 +97,7 @@
 <li><a href="http://www.mimihhh.com/" target="_blank">咪咪爱</a></li>
 <li><a href="http://www.ykt9.com/" target="_blank">迎客堂</a></li>
 <li><a href="http://dio889.net/?fromuid=2077160" target="_blank">魔王の家</a></li>
-<li><a href="http://204.152.220.33/?fromuid=62536" target="_blank">新巴黎中文社区</a></li>
-<li><a href="http://www.yxg163.com/?fromuid=5741" target="_blank">夜香阁</a></li>
+<li><a href="http://204.152.220.32/?fromuid=62536" target="_blank">新巴黎中文社区</a></li>
 <li><a href="http://aaasss8.com/" target="_blank">SeDog</a></li>
 <li><a href="http://www.xb123.top/" target="_blank">花花世界</a></li>
 <li><a href="http://www.szsezh.com/" target="_blank">水中涩</a></li>
@@ -107,9 +105,10 @@
 <li><a href="http://www.2016td.com/" target="_blank">2016TD</a></li>
 <li><a href="https://www.nnpp99.com/" target="_blank">nnpp99</a></li>
 <li><a href="http://www.414zz.com/" target="_blank">台湾妹娱乐网</a></li>
-<li><a href="http://www.yezubuluo.com/?454135" target="_blank">椰族部落</a></li>
+<li><a href="http://yezu37.club/?454135" target="_blank">椰族部落</a></li>
 <li><a href="http://qianyifa.net/bbs/?fromuid=1216166" target="_blank">涩人党之性吧</a></li>
 <li><a href="https://wuso.me/?fromuid=10995" target="_blank">屋受論壇</a></li>
+<li><a href="http://www.diqiuav.com/?fromuid=2061" target="_blank">地球AV</a></li>
 <li><a href="https://caoav.net/" target="_blank">CaoAV</a></li>
 <li><a href="https://bbs.caoav.net/?fromuid=29070" target="_blank">CaoAV社区</a></li>
 <li><a href="http://www.99rebbs7.com/?fromuid=685495" target="_blank">99re论坛</a></li>
@@ -120,11 +119,9 @@
 <li><a href="http://www.srdao9.com/" target="_blank">俗人島</a></li>
 <li><a href="http://www.xiaav.la/" target="_blank">XIAAV论坛</a></li>
 <li><a href="http://ts3.lotro.cc/" target="_blank">AV 天空</a></li>
-<li><a href="https://ilbeya12.com/" target="_blank">ilbeya5</a></li>
-<li><a href="http://www.91szs.com/" target="_blank">91涩中涩</a></li>
 <li><a href="http://dianying01.com/?fromuid=981" target="_blank">电影01社区</a></li>
 <li><a href="http://www.wochalei.com/" target="_blank">貳月紅論壇</a></li>
-<li><a href="http://www.kku.cc/" target="_blank">三涩论坛</a></li>
+<li><a href="http://bbs.q2mm.com/" target="_blank">三涩论坛</a></li>
 <li><a href="http://thzbbt.com/?fromuid=70941" target="_blank">桃花族</a></li>
 				    </ul>
 		</div>
@@ -140,7 +137,7 @@
 <li><a href="http://landh.club/" target="_blank">蓝导航</a></li> 
 <li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li>
 <li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li>
-<li><a href="http://luanpadh9.com/" target="_blank">乱啪导航</a></li>
+<li><a href="http://www.yptq87.space/" target="_blank">乱啪导航</a></li>
 <li><a href="http://yptq3.space/" target="_blank">约炮偷情导航</a></li>
 <li><a href="http://chih.space/" target="_blank">痴汉导航</a></li>
 <li><a href="http://www.xinfuli.cc/" target="_blank">新福利导航</a></li>
@@ -148,23 +145,19 @@
 <li><a href="http://www.xiushe.info/" target="_blank">羞射福利导航</a></li>                            
 <li><a href="http://www.xionzhan.com/" target="_blank">你懂得福利导航</a></li>
 <li><a href="http://www.idiyi.biz/" target="_blank">第一色导航</a></li>
-<li><a href="http://www.haoavfl.com/" target="_blank">好AV导航</a></li>
 <li><a href="http://www.ssmmdh.com/" target="_blank">色妹妹导航</a></li>
 <li><a href="http://www.dafjdh.xyz/" target="_blank">打飞机导航</a></li>
 <li><a href="http://yeyeliu.com/" target="_blank">夜夜流</a></li>
 <li><a href="http://www.fulidh.info/" target="_blank">夜火福利导航</a></li>
-<li><a href="http://luanpadh9.com/" target="_blank">乱啪导航</a></li>
 <li><a href="http://192.240.116.140/lw78/" target="_blank">老王福利导航</a></li>
-<li><a href="http://zaixianavdh.info/" target="_blank">在线av导航</a></li>
-<li><a href="http://www.nmdaohang.com/" target="_blank">尼玛导航</a></li>
+<li><a href="http://www.nima1b.space/" target="_blank">尼玛导航</a></li>
 <li><a href="http://bigefuli.space/" target="_blank">逼格福利导航</a></li>
 <li><a href="http://nvyoudh.com/" target="_blank">找女优导航</a></li>
 <li><a href="http://caolvchadh.com/" target="_blank">草绿茶导航</a></li>
 <li><a href="http://shunvdh.com/" target="_blank">熟女导航</a></li>
 <li><a href="http://aidada.space/" target="_blank">大爱导航</a></li>
 <li><a href="http://lajiao1.xyz/" target="_blank">辣椒导航</a></li>
-<li><a href="http://dh.19xa.pw/" target="_blank">福利导航</a></li>
-<li><a href="http://74fuli.xyz/" target="_blank">骑士福利导航</a></li>
+<li><a href="http://19xa.win/" target="_blank">福利导航</a></li>
 <li><a href="http://69dh.top/" target="_blank">69宅男福利导航</a></li>
 <li><a href="http://www.cluotuo.net/" target="_blank">草骆驼导航</a></li>
 <li><a href="http://www.yikufl.net/" target="_blank">一库福利导航</a></li>
@@ -200,13 +193,10 @@
 <li><a href="http://www.tkbtxcom.com/" target="_blank">开心撸撸</a></li>
 <li><a href="http://myavstreams.com/" target="_blank">MyAvStreams</a></li>
 <li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
-<li><a href="http://www.heixiu1.com/" target="_blank">嘿咻123</a></li>
+<li><a href="http://www.heixiu123.com/" target="_blank">嘿咻123</a></li>
 <li><a href="http://www.94lua3.com/" target="_blank">94撸啊</a></li>
-<li><a href="http://www.renyubaba1.com/" target="_blank">人鱼爸爸</a></li>
+<li><a href="http://www.renyu88.com/" target="_blank">人鱼爸爸</a></li>
 <li><a href="http://www.8888av.xyz/" target="_blank">夏娃视频</a></li>
-<li><a href="http://www.caobiao34.com/" target="_blank">我要操婊</a></li>
-<li><a href="http://www.91rav.com/" target="_blank">91RAV</a></li>
-<li><a href="http://www.f0yy.com/" target="_blank">7M在线视频</a></li>
 <li><a href="http://www.tongtongcao.com/" target="_blank">彤彤草</a></li>
 <li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
 <li><a href="http://email.qingcaodizhi.at.gmail.com.q2c.space/" target="_blank">轻草视频</a></li>
@@ -225,7 +215,7 @@
 <li><a href="http://www.33999av.xyz/" target="_blank">夜狼视频</a></li>
 <li><a href="http://www.cao0005.com/" target="_blank">蝌蚪窝</a></li>
 <li><a href="https://www.uuzy03.com/" target="_blank">悠色资源网</a></li>
-<li><a href="http://www.avtb01.com/" target="_blank">AV淘宝</a></li>
+<li><a href="http://www.avtb001.com/" target="_blank">AV淘宝</a></li>
 <li><a href="http://av234567.com/" target="_blank">Sex169影城</a></li>
 <li><a href="http://hot1024.win/" target="_blank">18AV</a></li>
 <li><a href="http://www.adv16.com/" target="_blank">AVHD100</a></li>
@@ -239,7 +229,7 @@
 <li><a href="http://99kk7.com/" target="_blank">久久热</a></li>
 <li><a href="http://www.saomao8.com/" target="_blank">久久视频</a></li>
 <li><a href="http://www.aotu20.com/" target="_blank">凹凸视频</a></li>
-<li><a href="http://www.qqxxcc.com/" target="_blank">青青草</a></li>
+<li><a href="http://www.qczb1.com/" target="_blank">青青草</a></li>
 <li><a href="http://www.qylsp.com/" target="_blank">青娱乐视频</a></li>
 <li><a href="http://www.lu2116.com/" target="_blank">撸尔山</a></li>
 <li><a href="http://www.zz1255.com/" target="_blank">姐姐要爱</a></li>
@@ -280,7 +270,7 @@
 <li><a href="http://www.avku8.com/" target="_blank">高清在线AV</a></li>
 <li><a href="http://www.kuav6.com/" target="_blank">猫兔TV</a></li>
 <li><a href="http://sifangpian.xyz/" target="_blank">私房片</a></li>
-<li><a href="http://www.youbbb.la/" target="_blank">有B吗？</a></li>
+<li><a href="http://youbbb.cc/" target="_blank">有B吗？</a></li>
 <li><a href="http://www.gogo3333.com/" target="_blank">宅男频道</a></li>
 <li><a href="http://www.megaline.co/Cazn2" target="_blank">91porn</a></li>
 				    </ul>
@@ -299,11 +289,10 @@
 <li><a href="https://www.tnaflix.com/" target="_blank">TNAFlix</a></li>
 <li><a href="http://www.keezmovies.com/" target="_blank">keezm</a></li>
 <li><a href="http://www.hd21.com/" target="_blank">Hd21</a></li>
-<li><a href="http://www.kuntfutube.com/" target="_blank">KuntFu Tube</a></li>
 <li><a href="http://www.pornomovies.com/" target="_blank">PornoMovies</a></li>
 <li><a href="http://instantfap.com/" target="_blank">精彩片断</a></li>
-<li><a href="http://maturetubeporn.xyz/" target="_blank">Maturetube</a></li>
 <li><a href="http://thisvid.com/" target="_blank">ThisVid</a></li>
+<li><a href="http://www.rushporn.com/" target="_blank">Rush Porn</a></li>
 <li><a href="http://www.shameless.com/" target="_blank">Shameless</a></li>
 <li><a href="https://www.fetishshrine.com/" target="_blank">FetishShrine</a></li>
 <li><a href="https://zbporn.com/" target="_blank">ZBPORN</a></li>
@@ -319,8 +308,10 @@
 <li><a href="http://neathdporn.com/" target="_blank">Neat HD Porn</a></li>
 <li><a href="http://www.absoluporn.com/" target="_blank">AbsoluPorn</a></li>
 <li><a href="http://www.pornktube.com/" target="_blank">PORNKTUBE</a></li>
+<li><a href="https://www.porndig.com/" target="_blank">PornDig</a></li>
 <li><a href="http://pornorio.org/" target="_blank">Pornorio</a></li>
 <li><a href="https://pornfun.com/" target="_blank">PornFun</a></li>
+<li><a href="http://pornsland.com/" target="_blank">Pornsland</a></li>
 <li><a href="http://www.epornik.com/" target="_blank">ePornik</a></li>
 <li><a href="http://www.shesfreaky.com/" target="_blank">ShesFreaky</a></li>
 <li><a href="http://www.hoodamateurs.com/" target="_blank">HOODAMA</a></li>
@@ -371,7 +362,6 @@
 <li><a href="http://javcl.com/" target="_blank">JAVCL</a></li>
 <li><a href="https://av01.tv/" target="_blank">AV01</a></li>
 <li><a href="https://avuncensor.com/" target="_blank">AV uncensor</a></li>
-<li><a href="http://hdhardporn.com/" target="_blank">HDHardPorn</a></li>
 <li><a href="http://adultdouga-db.com/" target="_blank">無料AV アダルト</a></li>
 <li><a href="http://javmix.tv/" target="_blank">Javmix</a></li>
 <li><a href="http://beejp.net/" target="_blank">BeeJP</a></li>
@@ -446,7 +436,7 @@
 <li><a href="https://bbs.holyo.org/?fromuid=3565" target="_blank">圣灵神域</a></li>
 <li><a href="http://hentai-d.com/" target="_blank">Hentai-d</a></li>
 <li><a href="https://e-hentai.org/" target="_blank">E-Hentai</a></li>
-<li><a href="http://bbs.north-plus.net/" target="_blank">North Plus</a></li>
+<li><a href="http://bbs.south-plus.net/" target="_blank">North Plus</a></li>
 <li><a href="https://www.xxshe.com/" target="_blank">和邪社</a></li>
 <li><a href="http://18h.animezilla.com/" target="_blank">宅宅愛動漫</a></li>
 <li><a href="http://www.177piczz.info/" target="_blank">177漫畫</a></li>
@@ -456,7 +446,8 @@
 <li><a href="https://zerohentai.com/" target="_blank">0hentai</a></li>
 <li><a href="http://hentai4daily.com/" target="_blank">Hentai4Daily</a></li>
 <li><a href="http://www.hentaibobo.com/" target="_blank">卡通泡泡</a></li>
-<li><a href="http://www.ahri8.com/" target="_blank">松鼠症倉庫</a></li>
+<li><a href="http://ahri.pro/" target="_blank">松鼠症倉庫</a></li>
+<li><a href="https://www.prettyvirgin.com/" target="_blank">情涩A漫</a></li>
 <li><a href="http://hentaiplay.net/" target="_blank">hentaiplay</a></li>
 <li><a href="http://hentai.animestigma.com/" target="_blank">Hentai Stigma</a></li>
 <li><a href="http://hentaistream.com/" target="_blank">Hentai Stream</a></li>
@@ -464,11 +455,11 @@
 <li><a href="https://www.fakku.net/" target="_blank">FAKKU</a></li>
 <li><a href="http://www.toonaddict.com/" target="_blank">Toon Addict</a></li>
 <li><a href="http://www.mangago.me/" target="_blank">Mangago</a></li>
-<li><a href="http://milftoon.xxcomics.net/" target="_blank">Milftoon</a></li>
 <li><a href="http://collection-3d.com/" target="_blank">collection-3d</a></li>
-<li><a href="https://www.studiofow.com/" target="_blank">studiofow</a></li>
+<li><a href="http://www.studiofow.com/" target="_blank">studiofow</a></li>
 <li><a href="http://javtorrent.re/" target="_blank">JP Torrent</a></li>
 <li><a href="https://www.cartoontube.xxx/" target="_blank">CartoonTube</a></li>
+<li><a href="http://www.cartoonpornvideos.com/" target="_blank">CartoonVideos</a></li>
 				    </ul>
 		</div>
 		</div>
@@ -531,7 +522,7 @@
 <li><a href="https://meirifuli.fun/" target="_blank">每日福利</a></li>
 <li><a href="http://haodiao.org/" target="_blank">haodiao</a></li>
 <li><a href="http://www.jdlingyu.moe/" target="_blank">绝对领域</a></li>
-<li><a href="https://www.dakashangche.com/" target="_blank">司机会所</a></li>
+<li><a href="https://www.dakashangche.net/" target="_blank">司机会所</a></li>
 <li><a href="https://400757.net/" target="_blank">唯美家园</a></li>
 <li><a href="http://www.huainanhai.com/" target="_blank">坏男孩</a></li>
 <li><a href="http://www.lqzj.net/" target="_blank">猎奇之家</a></li>
@@ -546,8 +537,8 @@
 <li><a href="http://gaoqing.la/" target="_blank">中国高清网</a></li>
 <li><a href="https://www.wodehd.com/" target="_blank">我的高清影院</a></li>
 <li><a href="http://www.wmdyw.net/" target="_blank">无名影院</a></li>
-<li><a href="http://www.cmmov.cc/" target="_blank">草民电影网</a></li>
-<li><a href="http://www.ibtibt.com/" target="_blank">四季高清网</a></li>
+<li><a href="http://www.cmdy.tv/" target="_blank">草民电影网</a></li>
+<li><a href="http://www.44hd.cc/" target="_blank">四季高清网</a></li>
 <li><a href="http://majiamen.com/" target="_blank">马甲门论坛</a></li>
 <li><a href="http://bbs.sdbeta.com/" target="_blank">闪电联盟</a></li>
 <li><a href="http://bbs.feng.com/" target="_blank">威锋网</a></li>
@@ -555,7 +546,7 @@
 <li><a href="http://www.hacken.cc/bbs/?fromuid=1592981" target="_blank">電玩動漫</a></li>
 <li><a href="http://98.126.51.43/" target="_blank">猪猪乐园</a></li>
 <li><a href="http://www.bmdru.com/" target="_blank">顶好精品论坛</a></li>
-<li><a href="http://www.zhenhaobt.com/" target="_blank">真好论坛</a></li>
+<li><a href="http://www.zhenhaole.com/" target="_blank">真好论坛</a></li>
 <li><a href="http://bbs.asiatvro.com/?fromuid=482005" target="_blank">卫视烧友论坛</a></li>
 				    </ul>
 		</div>
@@ -569,14 +560,14 @@
 <li><a href="http://www.ja14b.com/cn/" target="_blank">JavLibrary</a></li>
 <li><a href="https://www.javbus.co/" target="_blank">JavBus</a></li>
 <li><a href="https://www.javhoo.com/" target="_blank">JAVHOO</a></li>
-<li><a href="http://www.kkav.tv/" target="_blank">一本道</a></li>
+<li><a href="http://www.yibendao.tv/" target="_blank">一本道</a></li>
 <li><a href="https://7mm.tv/" target="_blank">7mm</a></li>
 <li><a href="https://jmvbt.com/" target="_blank">Javbooks</a></li>
 <li><a href="http://www.avavav1.com/" target="_blank">AV小四郎</a></li>
 <li><a href="http://3q2w1e.xyz/" target="_blank">色狐狸</a></li>
 <li><a href="http://jp.notreal.cn/" target="_blank">假啪网</a></li>
 <li><a href="http://www.fhla.me/" target="_blank">番号库</a></li>
-<li><a href="http://www.99fanhao.com/" target="_blank">99番号网</a></li>
+<li><a href="https://www.99fanhao.com/" target="_blank">99番号网</a></li>
 <li><a href="http://javpop.biz/" target="_blank">JAVPOP</a></li>
 <li><a href="http://mo999.net/" target="_blank">Dioguitar23</a></li>
 <li><a href="http://gojav.xyz/" target="_blank">GoJAV</a></li>
@@ -694,7 +685,6 @@
 <li><a href="http://jigadori.fkoji.com/" target="_blank">Twitter美女</a></li>
 <li><a href="http://www.dbmeinv.com/" target="_blank">豆瓣美女</a></li>
 <li><a href="http://www.ugirl.cc/" target="_blank">优女郎</a></li>
-<li><a href="http://www.nsr.ee/" target="_blank">女神热</a></li>
 <li><a href="http://www.ugirls.com/" target="_blank">尤果网</a></li>
 <li><a href="http://www.mzitu.com/" target="_blank">妹子图</a></li>
 <li><a href="http://www.mmjpg.com/" target="_blank">美女图片</a></li>
@@ -707,7 +697,6 @@
 <li><a href="http://www.gmlying.com/" target="_blank">国模丽影</a></li>
 <li><a href="http://www.timliao.com/bbs/forumdisplay.php?fid=18" target="_blank">提姆正妹版</a></li>
 <li><a href="http://asiangirlcunt.com/" target="_blank">asiangirlcunt</a></li>
-<li><a href="http://www.eastbabes.com/" target="_blank">EastBabes</a></li>
 <li><a href="http://www.jppornpic.com/" target="_blank">jppornpic</a></li>
 <li><a href="http://www.youngasianphotos.com/" target="_blank">youngasian</a></li>
 <li><a href="http://spric.me/" target="_blank">Celebrity</a></li>
@@ -796,6 +785,7 @@
 <li><a href="http://ttzy3.com/" target="_blank">图图资源</a></li>
 <li><a href="http://bt696.com/" target="_blank">种子库</a></li>
 <li><a href="http://bt2.bt87.cc/" target="_blank">种子磁力搜索</a></li>
+<li><a href="http://haidaowanbt.com/" target="_blank">海盗湾BT</a></li>
 <li><a href="http://btgongchang.org/" target="_blank">BT工厂</a></li>
 <li><a href="http://www.btavmo.org/" target="_blank">BTAVMO</a></li>
 <li><a href="http://www.btmon.com/" target="_blank">BTMon</a></li>
@@ -804,7 +794,7 @@
 <li><a href="https://www.ciliwan.com/" target="_blank">磁力湾</a></li>
 <li><a href="http://www.cilizhuzhu.org/" target="_blank">磁力猪</a></li>
 <li><a href="http://www.cilihome.net/" target="_blank">磁力之家</a></li>
-<li><a href="http://www.btcherry.com/" target="_blank">BT樱桃</a></li>
+<li><a href="http://www.btcerise.com/" target="_blank">BT樱桃</a></li>
 <li><a href="http://www.diaosisou.org/" target="_blank">屌丝搜</a></li>
 <li><a href="http://www.btkuai.cc/" target="_blank">BT快搜</a></li>
 <li><a href="http://www.btanx.com/" target="_blank">BT蚂蚁</a></li>
