--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
 <li><a href="http://1280yy.com/1096417" target="_blank">性吧春暖花开</a></li>
 <li><a href="http://174.127.195.196/bbs/index.php" target="_blank">色中色</a></li>
 <li><a href="http://38.103.161.158/forum/?fromuid=11991220" target="_blank">第一会所</a></li>
-<li><a href="http://xisezi.co/?fromuid=80" target="_blank">Xisezi精品</a></li>
+<li><a href="http://xisezi.vip/?fromuid=80" target="_blank">Xisezi精品</a></li>
 <li><a href="http://www.jsyfyy.com/?fromuid=829" target="_blank">季色论坛</a></li>
+<li><a href="http://sis7.net/" target="_blank">红秀资源网</a></li>
 <li><a href="http://www.porna5.com/" target="_blank">Porn采集者</a></li>
 <li><a href="http://www.qiseshequ.info/" target="_blank">奇色社区</a></li>
 <li><a href="http://204.44.109.3/index.htm" target="_blank">草原狼论坛</a></li>
@@ -95,14 +96,14 @@
 <li><a href="https://fastzone.org/?fromuid=99373" target="_blank">無限討論區</a></li>
 <li><a href="http://bbs.sex169.pw/?fromuid=141932" target="_blank">SEX169 論壇</a></li>
 <li><a href="http://www.mimihhh.com/" target="_blank">咪咪爱</a></li>
-<li><a href="http://www.ykt9.com/" target="_blank">迎客堂</a></li>
+<li><a href="http://www.ykt11.com/" target="_blank">迎客堂</a></li>
 <li><a href="http://dio889.net/?fromuid=2077160" target="_blank">魔王の家</a></li>
 <li><a href="http://204.152.220.32/?fromuid=62536" target="_blank">新巴黎中文社区</a></li>
 <li><a href="http://aaasss8.com/" target="_blank">SeDog</a></li>
 <li><a href="http://www.xb123.top/" target="_blank">花花世界</a></li>
 <li><a href="http://www.szsezh.com/" target="_blank">水中涩</a></li>
 <li><a href="https://8888av.co/" target="_blank">千百撸</a></li>
-<li><a href="http://www.2016td.com/" target="_blank">2016TD</a></li>
+<li><a href="https://3344ax.com/" target="_blank">3344AX</a></li>
 <li><a href="https://www.nnpp99.com/" target="_blank">nnpp99</a></li>
 <li><a href="http://www.414zz.com/" target="_blank">台湾妹娱乐网</a></li>
 <li><a href="http://yezu37.club/?454135" target="_blank">椰族部落</a></li>
@@ -153,7 +154,7 @@
 <li><a href="http://www.nima1b.space/" target="_blank">尼玛导航</a></li>
 <li><a href="http://bigefuli.space/" target="_blank">逼格福利导航</a></li>
 <li><a href="http://nvyoudh.com/" target="_blank">找女优导航</a></li>
-<li><a href="http://caolvchadh.com/" target="_blank">草绿茶导航</a></li>
+<li><a href="http://caott.space/" target="_blank">草绿茶导航</a></li>
 <li><a href="http://shunvdh.com/" target="_blank">熟女导航</a></li>
 <li><a href="http://aidada.space/" target="_blank">大爱导航</a></li>
 <li><a href="http://lajiao1.xyz/" target="_blank">辣椒导航</a></li>
@@ -190,6 +191,7 @@
 <li><a href="http://www.qyule.in/" target="_blank">青娱乐</a></li>
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
 <li><a href="http://khd123.info/" target="_blank">快活岛</a></li>
+<li><a href="http://www.papax.cc/" target="_blank">啪啪高清</a></li>
 <li><a href="http://www.tkbtxcom.com/" target="_blank">开心撸撸</a></li>
 <li><a href="http://myavstreams.com/" target="_blank">MyAvStreams</a></li>
 <li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
@@ -200,7 +202,7 @@
 <li><a href="http://www.tongtongcao.com/" target="_blank">彤彤草</a></li>
 <li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
 <li><a href="http://email.qingcaodizhi.at.gmail.com.q2c.space/" target="_blank">轻草视频</a></li>
-<li><a href="http://email.lvchadizhi.at.gmail.com.gre7.space/" target="_blank">绿茶视频</a></li>
+<li><a href="http://email.lvchadz.at.gmx.com.6tea.space/" target="_blank">绿茶视频</a></li>
 <li><a href="http://hxplayer.com/" target="_blank">红杏视频</a></li>
 <li><a href="http://email.v2dizhi.at.gmail.com.vv9.space/" target="_blank">V2视频</a></li>
 <li><a href="http://d8lulu.com/" target="_blank">D8视频</a></li>
@@ -236,7 +238,7 @@
 <li><a href="http://www.9i88.vip/" target="_blank">久爱啪啪网</a></li>
 <li><a href="http://www.vod49.com/" target="_blank">VOD视频</a></li>
 <li><a href="https://www.238hk.com/" target="_blank">四虎影库</a></li>
-<li><a href="http://www.19kmkm.com/" target="_blank">56pao</a></li>
+<li><a href="http://www.25kmkm.com/" target="_blank">27pao</a></li>
 <li><a href="https://vid.caocee.com/" target="_blank">CaoPorn</a></li>
 <li><a href="http://cat3movie.us/" target="_blank">海外三极</a></li>
 <li><a href="http://www.damose.com/" target="_blank">IAVporn</a></li>
