--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 		<strong><a name="/3/">综合论坛</a></strong><strong style="padding:0 238px;color:#FF9900;font-size:15px;font-family:Microsoft YaHei;">蓝色小导航最新地址：<a href="http://fuli.gq" target="_blank"><span style="color:#2bf7c0;">fuli.gq</span></a> <a href="http://boat.ml" target="_blank"><span style="color:#2bf7c0;">boat.ml</span></a> <a href="http://girl.gq" target="_blank"><span style="color:#2bf7c0;">girl.gq</span></a></strong> 
 		<div class="linkl">
 		<ul>
-<li><a href="https://ns.ddder.us/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
+<li><a href="https://ss.giit.us/index.php?u=296710&ext=96e5d" target="_blank">草榴社区</a></li>
 <li><a href="http://brow.ga/" target="_blank">精品福利</a></li>
 <li><a href="http://rock189.com/" target="_blank">火箭社区</a></li>
 <li><a href="http://fl473.com/" target="_blank">福利社区</a></li>
@@ -116,7 +116,7 @@
 <li><a href="http://ww.b7bbb.com/?fromuid=65678" target="_blank">有B吗？</a></li>
 <li><a href="http://174.138.175.178/" target="_blank">比思论坛</a></li>
 <li><a href="http://www.bbx365.com/?fromuid=1010710" target="_blank">百姓阁</a></li>
-<li><a href="http://kb978.com/?fromuid=19246" target="_blank">9453社區</a></li>
+<li><a href="http://9453p.com/?fromuid=19246" target="_blank">9453社區</a></li>
 <li><a href="http://www.srdao9.com/" target="_blank">俗人島</a></li>
 <li><a href="http://www.xiaav.la/" target="_blank">XIAAV论坛</a></li>
 <li><a href="http://ts3.lotro.cc/" target="_blank">AV 天空</a></li>
@@ -182,7 +182,7 @@
 <li><a href="https://post.7yinyue.pw/" target="_blank">老司机视频</a></li>
 <li><a href="http://95big.pw/" target="_blank">95自拍视频</a></li>
 <li><a href="http://www.pornoshock.org/asian/" target="_blank">AV天堂HD</a></li>
-<li><a href="http://www.apian50.com/" target="_blank">A片迷</a></li>
+<li><a href="http://www.apian80.com/" target="_blank">A片迷</a></li>
 <li><a href="https://oxx.life/" target="_blank">哦叉叉视频</a></li>
 <li><a href="http://www.ikan6.com/" target="_blank">爱看AV</a></li>
 <li><a href="https://yaojingav.com/" target="_blank">妖精视频</a></li>
@@ -208,7 +208,7 @@
 <li><a href="http://d8lulu.com/" target="_blank">D8视频</a></li>
 <li><a href="http://email.qisededizhi.at.gmail.com.qs7.space/" target="_blank">奇色视频</a></li>
 <li><a href="http://www.benselol.com/" target="_blank">本色视频</a></li>
-<li><a href="http://www.chunseporn.com/" target="_blank">春色视频</a></li>
+<li><a href="http://cspp.space/" target="_blank">春色视频</a></li>
 <li><a href="http://email.dizhi.at.f2.com.6hp.space/" target="_blank">火兔视频</a></li>
 <li><a href="http://zhizunhu.co/" target="_blank">哦哦免费电影</a></li>
 <li><a href="http://hd.javiii.info/" target="_blank">超爱视频</a></li>
@@ -230,7 +230,7 @@
 <li><a href="http://www.mao005.com/" target="_blank">东京热</a></li>
 <li><a href="http://99kk7.com/" target="_blank">久久热</a></li>
 <li><a href="http://www.saomao8.com/" target="_blank">久久视频</a></li>
-<li><a href="http://www.aotu20.com/" target="_blank">凹凸视频</a></li>
+<li><a href="http://www.aotu18.com/" target="_blank">凹凸视频</a></li>
 <li><a href="http://www.qczb1.com/" target="_blank">青青草</a></li>
 <li><a href="http://www.qylsp.com/" target="_blank">青娱乐视频</a></li>
 <li><a href="http://www.lu2116.com/" target="_blank">撸尔山</a></li>
@@ -559,7 +559,7 @@
 		<strong><a name="/11/">島國情报</a></strong>
 		<div class="linkl">
 		<ul>
-<li><a href="http://www.ja14b.com/cn/" target="_blank">JavLibrary</a></li>
+<li><a href="http://www.j15av.com/cn/" target="_blank">JavLibrary</a></li>
 <li><a href="https://www.javbus.co/" target="_blank">JavBus</a></li>
 <li><a href="https://www.javhoo.com/" target="_blank">JAVHOO</a></li>
 <li><a href="http://www.yibendao.tv/" target="_blank">一本道</a></li>
