--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
 <li><a href="http://brow.ga/" target="_blank">精品福利</a></li>
 <li><a href="http://rock189.com/" target="_blank">火箭社区</a></li>
 <li><a href="http://fl473.com/" target="_blank">福利社区</a></li>
-<li><a href="http://208.94.244.98/bt/?u=701541" target="_blank">爱城</a></li>
+<li><a href="http://ai.cnnice.biz/bt/?u=701541" target="_blank">爱城</a></li>
 <li><a href="http://x77126.com/bbs/" target="_blank">Xiao77</a></li>
 <li><a href="http://1280yy.com/1096417" target="_blank">性吧春暖花开</a></li>
-<li><a href="http://174.127.195.196/bbs/index.php" target="_blank">色中色</a></li>
+<li><a href="http://174.127.195.205/bbs/index.php" target="_blank">色中色</a></li>
 <li><a href="http://38.103.161.158/forum/?fromuid=11991220" target="_blank">第一会所</a></li>
 <li><a href="http://xisezi.vip/?fromuid=80" target="_blank">Xisezi精品</a></li>
 <li><a href="http://www.jsyfyy.com/?fromuid=829" target="_blank">季色论坛</a></li>
@@ -90,7 +90,7 @@
 <li><a href="http://www.piring.com/bbs/tcn/?fromuid=2061069" target="_blank">痴汉俱乐部</a></li>
 <li><a href="http://t3.9laik.org/pw/" target="_blank">1024核工厂</a></li>
 <li><a href="http://www.aiyouyou.pw/?fromuid=1577" target="_blank">老司机论坛</a></li>
-<li><a href="http://45.76.208.137/?fromuid=2571826" target="_blank">捷克論壇</a></li>
+<li><a href="https://www.jkforum.net/?fromuid=2571826" target="_blank">捷克論壇</a></li>
 <li><a href="http://www.lsj1080.com/" target="_blank">MYHD1080</a></li>
 <li><a href="http://catcatforum.com/?fromuid=3045850" target="_blank">貓貓論壇</a></li>
 <li><a href="https://fastzone.org/?fromuid=99373" target="_blank">無限討論區</a></li>
@@ -123,7 +123,7 @@
 <li><a href="http://dianying01.com/?fromuid=981" target="_blank">电影01社区</a></li>
 <li><a href="http://www.wochalei.com/" target="_blank">貳月紅論壇</a></li>
 <li><a href="http://bbs.q2mm.com/" target="_blank">三涩论坛</a></li>
-<li><a href="http://thzbbt.com/?fromuid=70941" target="_blank">桃花族</a></li>
+<li><a href="http://thzbbt.net/?fromuid=70941" target="_blank">桃花族</a></li>
 				    </ul>
 		</div>
 		</div>
@@ -176,13 +176,11 @@
 		<ul>
 <li><a href="http://www.bxzx99.xyz/" target="_blank">百性在线</a></li>
 <li><a href="http://www.javiii.com/" target="_blank">caoliu视频</a></li>
-<li><a href="http://www.tuoleku.com/" target="_blank">脱了裤</a></li>
 <li><a href="http://www.jise8.com/" target="_blank">季色网</a></li>
-<li><a href="http://www.jier8.com/" target="_blank">鸡儿吧</a></li>
 <li><a href="https://post.7yinyue.pw/" target="_blank">老司机视频</a></li>
 <li><a href="http://95big.pw/" target="_blank">95自拍视频</a></li>
 <li><a href="http://www.pornoshock.org/asian/" target="_blank">AV天堂HD</a></li>
-<li><a href="http://www.apian80.com/" target="_blank">A片迷</a></li>
+<li><a href="http://www.apian50.com/" target="_blank">A片迷</a></li>
 <li><a href="https://oxx.life/" target="_blank">哦叉叉视频</a></li>
 <li><a href="http://www.ikan6.com/" target="_blank">爱看AV</a></li>
 <li><a href="https://yaojingav.com/" target="_blank">妖精视频</a></li>
@@ -192,14 +190,10 @@
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
 <li><a href="http://khd123.info/" target="_blank">快活岛</a></li>
 <li><a href="http://www.papax.cc/" target="_blank">啪啪高清</a></li>
-<li><a href="http://www.tkbtxcom.com/" target="_blank">开心撸撸</a></li>
 <li><a href="http://myavstreams.com/" target="_blank">MyAvStreams</a></li>
 <li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
-<li><a href="http://www.heixiu123.com/" target="_blank">嘿咻123</a></li>
-<li><a href="http://www.94lua3.com/" target="_blank">94撸啊</a></li>
-<li><a href="http://www.renyu88.com/" target="_blank">人鱼爸爸</a></li>
-<li><a href="http://www.8888av.xyz/" target="_blank">夏娃视频</a></li>
 <li><a href="http://www.tongtongcao.com/" target="_blank">彤彤草</a></li>
+<li><a href="http://1024go.xyz/" target="_blank">寻欢堂</a></li>
 <li><a href="http://yingtaopa.com/" target="_blank">樱桃视频</a></li>
 <li><a href="http://email.qingcaodizhi.at.gmail.com.q2c.space/" target="_blank">轻草视频</a></li>
 <li><a href="http://email.lvchadz.at.gmx.com.6tea.space/" target="_blank">绿茶视频</a></li>
@@ -211,9 +205,7 @@
 <li><a href="http://cspp.space/" target="_blank">春色视频</a></li>
 <li><a href="http://email.dizhi.at.f2.com.6hp.space/" target="_blank">火兔视频</a></li>
 <li><a href="http://zhizunhu.co/" target="_blank">哦哦免费电影</a></li>
-<li><a href="http://hd.javiii.info/" target="_blank">超爱视频</a></li>
-<li><a href="http://xcxc11.info/" target="_blank">AV撸视频</a></li>
-<li><a href="http://z3d2r1dc.space/" target="_blank">灯草视频</a></li>
+<li><a href="http://huddc.club/" target="_blank">灯草视频</a></li>
 <li><a href="http://www.33999av.xyz/" target="_blank">夜狼视频</a></li>
 <li><a href="http://www.cao0005.com/" target="_blank">蝌蚪窝</a></li>
 <li><a href="https://www.uuzy03.com/" target="_blank">悠色资源网</a></li>
@@ -222,21 +214,18 @@
 <li><a href="http://hot1024.win/" target="_blank">18AV</a></li>
 <li><a href="http://www.adv16.com/" target="_blank">AVHD100</a></li>
 <li><a href="https://cn.ax98.ws/" target="_blank">高清AVHD101</a></li>
-<li><a href="http://www.xhg1234.info/" target="_blank">寻欢阁</a></li>
-<li><a href="http://www.7mshipin.com/" target="_blank">7M视频</a></li>
+<li><a href="http://www.7mshipin.net/" target="_blank">7M视频</a></li>
 <li><a href="http://www.5xsq2.com/" target="_blank">5X社区</a></li>
-<li><a href="http://www.67sz123.com/" target="_blank">67射站</a></li>
 <li><a href="http://www.hongfange123.info/" target="_blank">红番阁</a></li>
 <li><a href="http://www.mao005.com/" target="_blank">东京热</a></li>
 <li><a href="http://99kk7.com/" target="_blank">久久热</a></li>
-<li><a href="http://www.saomao8.com/" target="_blank">久久视频</a></li>
 <li><a href="http://www.aotu18.com/" target="_blank">凹凸视频</a></li>
 <li><a href="http://www.qczb1.com/" target="_blank">青青草</a></li>
 <li><a href="http://www.qylsp.com/" target="_blank">青娱乐视频</a></li>
 <li><a href="http://www.lu2116.com/" target="_blank">撸尔山</a></li>
 <li><a href="http://www.zz1255.com/" target="_blank">姐姐要爱</a></li>
-<li><a href="http://www.9i88.vip/" target="_blank">久爱啪啪网</a></li>
-<li><a href="http://www.vod49.com/" target="_blank">VOD视频</a></li>
+<li><a href="http://www.9ipapa.com/" target="_blank">久爱啪啪网</a></li>
+<li><a href="http://www.vod52.com/" target="_blank">VOD视频</a></li>
 <li><a href="https://www.238hk.com/" target="_blank">四虎影库</a></li>
 <li><a href="http://www.25kmkm.com/" target="_blank">27pao</a></li>
 <li><a href="https://vid.caocee.com/" target="_blank">CaoPorn</a></li>
@@ -246,22 +235,19 @@
 <li><a href="https://www.buzzav.com/" target="_blank">BuzzAV</a></li>
 <li><a href="https://www.youav.com/" target="_blank">YouAV</a></li>
 <li><a href="http://www.yjizz4.com/" target="_blank">YouJizz</a></li>
-<li><a href="http://fcw26.com/" target="_blank">废柴视频网</a></li>
+<li><a href="http://fcw30.com/" target="_blank">废柴视频网</a></li>
 <li><a href="https://www.w832.com/" target="_blank">202z</a></li>
 <li><a href="https://pigav.com/" target="_blank">朱古力</a></li>
 <li><a href="http://goodav17.com/" target="_blank">正妹AV</a></li>
-<li><a href="http://se8av.com/" target="_blank">色吧AV</a></li>
 <li><a href="https://diguoav.com/" target="_blank">帝国AV</a></li>
 <li><a href="https://maomidy.com/" target="_blank">猫咪AV</a></li>
-<li><a href="http://www.777mm.us/" target="_blank">夜猫</a></li>
 <li><a href="http://qiezi88.com/" target="_blank">茄子在线</a></li>
 <li><a href="http://www.nekoxxx.com/" target="_blank">免費線上看</a></li>
-<li><a href="http://www.twav15.com/" target="_blank">AV中文</a></li>
+<li><a href="http://www.twav16.com/" target="_blank">AV中文</a></li>
 <li><a href="http://www.avhaha.com/" target="_blank">AVHAHA</a></li>
 <li><a href="http://www.pomiav.com/" target="_blank">爆米花免費AV</a></li>
 <li><a href="http://www.321jav.com/" target="_blank">321JAV</a></li>
 <li><a href="http://www.444.coffee/" target="_blank">444coffee</a></li>
-<li><a href="http://sogiav.com/" target="_blank">中文字幕AV</a></li>
 <li><a href="https://getrelax.club/" target="_blank">GetRelax</a></li>
 <li><a href="http://ourjav.com/" target="_blank">ourJAV</a></li>
 <li><a href="http://www.av539.com/" target="_blank">av539</a></li>
@@ -271,7 +257,7 @@
 <li><a href="https://xmovies247.com/" target="_blank">Xonline</a></li>
 <li><a href="http://www.avku8.com/" target="_blank">高清在线AV</a></li>
 <li><a href="http://www.kuav6.com/" target="_blank">猫兔TV</a></li>
-<li><a href="http://sifangpian.xyz/" target="_blank">私房片</a></li>
+<li><a href="http://sifangpian.online/" target="_blank">私房片</a></li>
 <li><a href="http://youbbb.cc/" target="_blank">有B吗？</a></li>
 <li><a href="http://www.gogo3333.com/" target="_blank">宅男频道</a></li>
 <li><a href="http://www.megaline.co/Cazn2" target="_blank">91porn</a></li>
@@ -399,7 +385,7 @@
 <li><a href="http://www.52yuanwei.pw/?fromuid=190756" target="_blank">我爱原味网</a></li>
 <li><a href="http://www.nztdsm10.com/?fromuid=411498" target="_blank">女主天地</a></li>
 <li><a href="https://bbs.crtslt.com/?fromuid=102241" target="_blank">潮人特色</a></li>
-<li><a href="http://www.u15loli.com/?fromuid=13188" target="_blank">U15萝莉小店</a></li>
+<li><a href="http://www.u-15loli.com/?fromuid=13188" target="_blank">U15萝莉小店</a></li>
 <li><a href="https://u15.info/" target="_blank">U-15天堂</a></li>
 <li><a href="http://www.young-dreams.com/" target="_blank">Young Dreams</a></li>
 <li><a href="http://www.wumeisz.net/?fromuid=9546" target="_blank">妩媚山庄</a></li>
@@ -479,7 +465,7 @@
 <li><a href="http://www.weipaifuliw.com/" target="_blank">微拍福利网</a></li>
 <li><a href="https://post.7yinyue.pw/info/" target="_blank">老司机性息</a></li>
 <li><a href="http://204.152.220.30/forum.php?fromuid=3479" target="_blank">欢乐夫妻</a></li>
-<li><a href="http://ywzd001.com/s/?fromuid=574073" target="_blank">欲望之都</a></li>
+<li><a href="https://ywzd001.com/s/?fromuid=574073" target="_blank">欲望之都</a></li>
 <li><a href="http://www.vipfuqi.com/?fromuid=776852" target="_blank">蝴蝶俱乐部</a></li>
 <li><a href="http://204.152.220.23/?fromuid=678142" target="_blank">逍遥游</a></li>
 <li><a href="http://www.cqhx.info/?fromuid=51281" target="_blank">全城嘿咻</a></li>
@@ -487,7 +473,7 @@
 <li><a href="http://www.myhhg.com/?u=430488" target="_blank">红河谷</a></li>
 <li><a href="http://trg0.info/?fromuid=248908" target="_blank">唐人阁</a></li>
 <li><a href="http://v.23c.im/" target="_blank">恋恋影视</a></li>
-<li><a href="http://chaturbate.us/" target="_blank">Online Cam</a></li>
+<li><a href="http://chaturbate.cc/" target="_blank">Online Cam</a></li>
 <li><a href="https://cams.com/" target="_blank">Cams</a></li>
 <li><a href="https://www.cam2fun.com/" target="_blank">Cam2Fun</a></li>
 <li><a href="https://www.cam4.com/" target="_blank">CAM4</a></li>
@@ -571,7 +557,7 @@
 <li><a href="http://www.fhla.me/" target="_blank">番号库</a></li>
 <li><a href="https://www.99fanhao.com/" target="_blank">99番号网</a></li>
 <li><a href="http://javpop.biz/" target="_blank">JAVPOP</a></li>
-<li><a href="http://mo999.net/" target="_blank">Dioguitar23</a></li>
+<li><a href="http://mo9999.net/" target="_blank">Dioguitar23</a></li>
 <li><a href="http://gojav.xyz/" target="_blank">GoJAV</a></li>
 <li><a href="http://gravure.com/tour/pages/index.php" target="_blank">GRAVURE</a></li>
 <li><a href="http://www.new-av.com/" target="_blank">92avday</a></li>
