--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
 <li><a href="http://1280yy.com/1096417" target="_blank">性吧春暖花开</a></li>
 <li><a href="http://174.127.195.205/bbs/index.php" target="_blank">色中色</a></li>
 <li><a href="http://38.103.161.158/forum/?fromuid=11991220" target="_blank">第一会所</a></li>
-<li><a href="http://xisezi.vip/?fromuid=80" target="_blank">Xisezi精品</a></li>
+<li><a href="http://xisezi.online/?fromuid=80" target="_blank">Xisezi精品</a></li>
 <li><a href="http://www.jsyfyy.com/?fromuid=829" target="_blank">季色论坛</a></li>
 <li><a href="http://sis7.net/" target="_blank">红秀资源网</a></li>
 <li><a href="http://www.porna5.com/" target="_blank">Porn采集者</a></li>
 <li><a href="http://www.qiseshequ.info/" target="_blank">奇色社区</a></li>
-<li><a href="http://204.44.109.3/index.htm" target="_blank">草原狼论坛</a></li>
+<li><a href="http://45.76.67.75/index.htm" target="_blank">草原狼论坛</a></li>
 <li><a href="http://mf68.xyz/" target="_blank">蜜蜂社区</a></li>
 <li><a href="http://192.240.116.140/bbs/" target="_blank">老王社区</a></li>
 <li><a href="http://www.99javgc.com/?fromuid=320" target="_blank">99爱唯工厂</a></li>
@@ -157,7 +157,7 @@
 <li><a href="http://caott.space/" target="_blank">草绿茶导航</a></li>
 <li><a href="http://shunvdh.com/" target="_blank">熟女导航</a></li>
 <li><a href="http://aidada.space/" target="_blank">大爱导航</a></li>
-<li><a href="http://lajiao1.xyz/" target="_blank">辣椒导航</a></li>
+<li><a href="http://lajiao2.xyz/" target="_blank">辣椒导航</a></li>
 <li><a href="http://19xa.win/" target="_blank">福利导航</a></li>
 <li><a href="http://69dh.top/" target="_blank">69宅男福利导航</a></li>
 <li><a href="http://www.cluotuo.net/" target="_blank">草骆驼导航</a></li>
@@ -205,8 +205,9 @@
 <li><a href="http://cspp.space/" target="_blank">春色视频</a></li>
 <li><a href="http://email.dizhi.at.f2.com.6hp.space/" target="_blank">火兔视频</a></li>
 <li><a href="http://zhizunhu.co/" target="_blank">哦哦免费电影</a></li>
-<li><a href="http://huddc.club/" target="_blank">灯草视频</a></li>
-<li><a href="http://www.33999av.xyz/" target="_blank">夜狼视频</a></li>
+<li><a href="http://dcvideo8.club/" target="_blank">灯草视频</a></li>
+<li><a href="http://www.ailuba.top/" target="_blank">爱撸吧福利社</a></li>
+<li><a href="http://91mianfeiav.com/" target="_blank">91免费AV</a></li>
 <li><a href="http://www.cao0005.com/" target="_blank">蝌蚪窝</a></li>
 <li><a href="https://www.uuzy03.com/" target="_blank">悠色资源网</a></li>
 <li><a href="http://www.avtb001.com/" target="_blank">AV淘宝</a></li>
