--- a/404.html
+++ b/404.html
@@ -1,15 +1,41 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!doctype html>
+<html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>很抱歉，此页面暂时找不到！</title>
+<meta charset="utf-8">
+<title>404错误页面</title>
+<style>
+*{margin:0;padding:0;color:#444}
+body{font-size:14px;font-family:"宋体"}
+.main{width:600px;margin:10% auto;}
+.title{background: #20a53a;color: #fff;font-size: 16px;height: 40px;line-height: 40px;padding-left: 20px;}
+.content{background-color:#f3f7f9; height:350px;border:1px dashed #c6d9b6;padding:20px}
+.t1{border-bottom: 1px dashed #c6d9b6;color: #ff4000;font-weight: bold; margin: 0 0 20px; padding-bottom: 18px;}
+.t2{margin-bottom:8px; font-weight:bold}
+ol{margin:0 0 20px 22px;padding:0;}
+ol li{line-height:30px}
+</style>
 </head>
+
 <body>
-<div class="text" style="text-align:center;line-height:30px;margin-top:90px;">
-	<p>抱歉，找不到此页面~</p>
-	<p>Sorry!The page you're looking for cannot be found. </p>
-	<p>你请求访问的页面，暂时找不到，建议您返回首页进行浏览，谢谢！</p>
-	<p><a href="/" title="进入首页" target="_blank">进入首页</a></p>
-</div>
+	<div class="main">
+		<div class="title">404错误页面</div>
+		<div class="content">
+			<p class="t1">您的请求在Web页面不存在！</p>
+			<p class="t2">可能原因：</p>
+			<ol>
+				<li>文件不存在!</li>
+				<li>伪静态设置错误!</li>
+				<li>网站目录权限不足!</li>
+				<li>IIS不支持该拓展名!</li>				
+			</ol>
+			<p class="t2">如何解决：</p>
+			<ol>
+				<li>检查文件是否存在</li>
+				<li>检测伪静态规则是否正确</li>
+				<li>授权目录Users写入和修改权限</li>
+				<li>卸载IIS，用面板重新安装IIS</li>				
+			</ol>
+		</div>
+	</div>
 </body>
 </html>
